--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sqlite3": "5.0.0"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^1.24.0",
     "@types/node": "14.0.27",
     "@types/react": "16.9.46",
     "typescript": "3.9.7"
