--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "next": "^11.1.2",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-dom": "16.13.1",
-    "sqlite": "4.0.14",
-    "sqlite3": "5.0.0"
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@supabase/supabase-js": "^1.24.0",
     "@types/node": "14.0.27",
     "@types/react": "16.9.46",
-    "typescript": "3.9.7"
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-react": "^7.26.1",
+    "typescript": "^4.4.4"
   }
 }
