--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
+    "extends": "plugin:react/recommended",
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -21,8 +17,5 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "eqeqeq": "off",
-        "curly": "warn",
-        "quotes": ["warn", "double"]
     }
 }
