--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "youtube-2020-april-nextjs-part8",
+  "name": "next-isr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "node ./test-migration.js && next dev -p 3031",
     "build": "node ./test-migration.js && next build",
     "export": "next export",
-    "start": "next start"
+    "start": "next start -p 3031"
   },
   "dependencies": {
     "@material-ui/core": "4.11.0",
@@ -21,9 +21,9 @@
     "@supabase/supabase-js": "^1.24.0",
     "@types/node": "14.0.27",
     "@types/react": "16.9.46",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "eslint": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
     "eslint-plugin-react": "^7.26.1",
     "typescript": "^4.4.4"
   }
